--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>Objects</title>
-		<!-- Custom JS -->
-		<script defer src="./script.js"></script>
-	</head>
-	<body>
-		<!-- HTML not needed -->
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Objects</title>
+    <link rel="stylesheet" href="./style.css" />
+    <!-- Custom JS -->
+    <script defer src="./script.js"></script>
+  </head>
+  <body>
+    <div class="header-wrapper">
+      <h2 class="navigation-title">Task navigation</h2>
+      <nav class="navigation">
+        <a href="https://masnauskas.github.io/JS-Exam-Navigation/">Home</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-1/">Task 1</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-2/">Task 2</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-3/">Task 3</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-4/">Task 4</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-5/">Task 5</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-6/">Task 6</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-7/">Task 7</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-8/">Task 8</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-9/" class="current"
+          >Task 9</a
+        >
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-10/">Task 10</a>
+        <a href="https://masnauskas.github.io/JS-Exam-TASK-11/">Task 11</a>
+      </nav>
+    </div>
+    <!-- HTML not needed -->
+  </body>
 </html>
